tests/ui/does-not-have-iter-interpolated.stderr
error[E0277]: the trait bound `HasIterator<false>: CheckHasIterator` is not satisfied
 --> tests/ui/does-not-have-iter-interpolated.rs:8:5
  |
8 |     quote!(#(#nonrep)*);
  |     ^^^^^^^^^^^^^^^^^^^ the trait `CheckHasIterator` is not implemented for `HasIterator<false>`
  |
  = help: the trait `CheckHasIterator` is implemented for `HasIterator<true>`
  = note: this error originates in the macro `$crate::quote_token_with_context` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
